[package]
name = "retl"
version = "0.1.0"
edition = "2024"

[dependencies]
flexi_logger = "0.29"
log = "0.4"
dyn-clone = "1.0.18"
#once_cell = "1.21"
pest = "2.7.15"
pest_derive  = "2.7.15"
memchr = "2.7.4"
regex = { version = "1.11.1", features = ["std", "unicode", "perf"] }
regex-syntax = {version = "0.8.5", features = ["unicode"]}
ahash = "0.8"
#indexmap = "2.7"
bytes = "1.10.0"
byteorder = "1.5"
chrono = "0.4.39"
itertools = "0.14.0"
rand = "0.9.0"
rand_regex = "0.18.0"
#regex_generate = "0.2.3"
serde = { version = "1.0.194", features = ["derive", "rc"] }
#serde-value = "0.7.0"
serde_json = "1.0.138"
serde_yaml = "0.9"
typetag = "0.2"
config = { version = "0.15.8", features = ["yaml"] }
# simd-json = "0.14.3"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
isahc = "1.7"
tiny_http = "0.12"
prometheus = "0.13"
signal-hook = "0.3"
base64 = "0.22"
lz4_flex = "0.11"
cityhash-rs = "1.0.1"
anyhow = "1.0"
mysql = { version = "26.0", optional = true }
postgres = { version = "0.19", features = ["with-chrono-0_4"], optional = true }
murmur3 = "0.5"
hex = "0.4"
#hyperloglog-rs = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
rdkafka = { version = "0.37.0", features = ["cmake-build"], optional = true }
[target.'cfg(target_os = "linux")'.dependencies]
rdkafka = { version = "0.37.0", features = ["cmake-build", "sasl"], optional = true }

[features]
default = ["kafka", "starrocks", "clickhouse"]
kafka = ["dep:rdkafka"]
starrocks = []
clickhouse = []
mysql = ["dep:mysql"]
postgres = ["dep:postgres"]

[build]
rustflags = ["-A", "warnings"]